Eddited app.js and Page.html

--- a/views/home.html
+++ b/views/home.html
@@ -63,7 +63,13 @@
 					        	</h4>
 					      	</div>
 					      	<div id="collapse1" class="panel-collapse collapse">
-					        	<div class="panel-body"><p>Project name</p><p>smth</p><p>smth else</p>
+					        	<div class="panel-body">
+					        		<p>Name: {{Naam}}</p>
+					        		<p>GitName: {{GitNaam}}</p>
+					        		<p>Repo: {{Repo}}</p>
+					        		<p>Promotor: {{Promotor}}</p>
+					        		<p>Phone: {{Phone}}</p>
+					        		<p>Address: {{Address}}</p>
 					        	</div>
 					      	</div>
 					    </div>
