Extracting Name from github

--- a/views/home.html
+++ b/views/home.html
@@ -28,7 +28,7 @@
 	<div class="page-header text-center">
   		<div class="btn-toolbar pull-right">
     		<div class="btn-group">
-     	 		<button type='button' class="btn btn-lg btn-success SignIn-fix">
+     	 		<button type='button' class="btn btn-lg btn-success SignIn-fix" ng-click="GetFile">
      	 		SignIn
      	 		</button>
     		</div>
@@ -64,12 +64,12 @@
 					      	</div>
 					      	<div id="collapse1" class="panel-collapse collapse">
 					        	<div class="panel-body">
-					        		<p>Name: {{Naam}}</p>
-					        		<p>GitName: {{GitNaam}}</p>
-					        		<p>Repo: {{Repo}}</p>
-					        		<p>Promotor: {{Promotor}}</p>
-					        		<p>Phone: {{Phone}}</p>
-					        		<p>Address: {{Address}}</p>
+					        		<p>Name: {{getNaam1}}</p>
+					        		<p>GitName: {{getGitNaam}}</p>
+					        		<p>Repo: {{getReponaam}}</p>
+					        		<p>Promotor: {{getPromotor}}</p>
+					        		<p>Phone: {{getPhone}}</p>
+					        		<p>Address: {{getAddress}}</p>
 					        	</div>
 					      	</div>
 					    </div>
