Commitinfo api called + Integrated

--- a/views/home.html
+++ b/views/home.html
@@ -151,7 +151,8 @@
 
 				<div>
 					<div ng-show="div_value =='1'">
-						11111111111111111
+						<p>This Weeks Commit: {{LastCommithtml}}</p>
+						<p>Total Commits: {{TotalCommithtml}}</p>
 					</div>
 					<div ng-show="div_value =='2'">
 						22222222222222222
