--- a/views/home.html
+++ b/views/home.html
@@ -21,11 +21,11 @@
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
 </head>
-<body ng-app="myapp" ng-controller="myCtrl" style="background-color:#0097A7">
+<body ng-app="myapp" ng-controller="myCtrl" class="HeaderColor">
 	<div class="text-center" >
   		<div class="btn-toolbar pull-right">
     		<div class="btn-group">
-     	 		<button type='button' class="btn btn-lg SignIn-fix" ng-click="GetFile()" style="background:#FF6F00">
+     	 		<button type='button' class="btn btn-lg SignIn-fix AccentColorSignIn" ng-click="GetFile()">
      	 		SignIn
      	 		</button>
     		</div>
@@ -37,7 +37,7 @@
 	<div class="container-fluid"> <!-- -fluid to make it use full width of page//-->
 
  	 	<div class="row">
- 	 		<div class="col-md-4 col-lg-2 col-sm-4 col-xs-4" style="background-color:#4dd0e1">
+ 	 		<div class="col-md-4 col-lg-2 col-sm-4 col-xs-4 SecondaryColor">
  	 			<div id="SearchBar" class="input-group searchbar-fix">
     				<input id="SearchTerm" type="text" placeholder="Search" class="form-control">
     					<div class="input-group-btn">
@@ -127,7 +127,7 @@
 
  	 			</div>
  	 		</div>
- 	 		<div class="col-md-8 col-lg-10 col-sm-8 col-xs-8" style="background-color:#00BCD4">
+ 	 		<div class="col-md-8 col-lg-10 col-sm-8 col-xs-8 PrimaryColor">
 
  	 			<div>ProjectName Student name</div>
 
@@ -153,6 +153,22 @@
 					<div ng-show="div_value =='1'">
 						<p>This Weeks Commit: {{LastCommithtml}}</p>
 						<p>Total Commits: {{TotalCommithtml}}</p>
+						<p>blabla</p>
+						<p>blabla</p>
+						<p>blabla</p>
+						<p>blabla</p>
+						<p>blabla</p>
+						<p>blabla</p>
+						<p>blabla</p>
+						<p>blabla</p>
+						<p>blabla</p>
+						<p>blabla</p>
+						<p>blabla</p>
+						<p>blabla</p>
+						<p>blabla</p>
+						<p>blabla</p>
+						<p>blabla</p>
+						<p>blabla</p>
 					</div>
 					<div ng-show="div_value =='2'">
 						22222222222222222
