WebPage klaargemaakt voor demo

--- a/public/stylesheets/BootstrapOverride.css
+++ b/public/stylesheets/BootstrapOverride.css
@@ -38,6 +38,7 @@
 
 .SecondaryColor{
 	background-color:#4db6ac;
+	min-height: 100%;
 }
 
 .AccentColorSignIn{
@@ -52,10 +53,10 @@
 
 .my-switch-animation.ng-enter,
 .my-switch-animation.ng-leave {
-  -webkit-transition:0.5s linear all;
-  -moz-transition:0.5s linear all;
-  -o-transition:0.5s linear all;
-  transition:0.5s linear all;
+  -webkit-transition:0.2s linear all;
+  -moz-transition:0.2s linear all;
+  -o-transition:0.2s linear all;
+  transition:0.2s linear all;
 
   position:absolute;
 }
