home.html fout in text opgelost

--- a/views/home.html
+++ b/views/home.html
@@ -153,7 +153,7 @@
 
 				<div class="panel-body" ng-switch="div_value">
 					<div ng-switch-when="1" class="my-switch-animation">
-						<p>This Weeks Commit: {{LastCommithtml}}</p>
+						<p>This Weeks Commits: {{LastCommithtml}}</p>
 						<p>Total Commits: {{TotalCommithtml}}</p>
 						<div class="btn-group" role="group">
 							<div ng-click="GetFile()" class="btn-group" role="group">
