--- a/views/home.html
+++ b/views/home.html
@@ -69,6 +69,7 @@
 					        		<p>Promotor: {{getPromotor}}</p>
 					        		<p>Phone: {{getPhone}}</p>
 					        		<p>Address: {{getAddress}}</p>
+									<a href="{{getRepoLink}}">Go To Repo</a>
 					        	</div>
 					      	</div>
 					    </div>
