--- a/views/home.html
+++ b/views/home.html
@@ -27,7 +27,7 @@
 	<div class="text-center" >
   		<div class="btn-toolbar pull-right">
     		<div class="btn-group">
-     	 		<button type='button' class="btn btn-lg SignIn-fix AccentColorSignIn">
+     	 		<button ng-click="apiRepoCall()" type='button' class="btn btn-lg SignIn-fix AccentColorSignIn">
      	 		SignIn
      	 		</button>
     		</div>
@@ -49,15 +49,14 @@
     						</button>
     					</div>
 				</div>
-				<div class="btn-group-vertical" role="group">
+				<div class="btn-group-vertical btn-width-fix" role="group">
 
-					
 					<div class="input-group list-fix">
 					    <div class="panel panel-default">
 					      	<div class="panel-heading">
 					        	<h4 class="panel-title">
 					          		<a data-toggle="collapse" href="#collapse1">
-					          			Bryan Lameir	
+					          			Test Student info	
 					          		</a>
 					        	</h4>
 					      	</div>
@@ -73,61 +72,14 @@
 					        	</div>
 					      	</div>
 					    </div>
-					    <span class="input-group-btn">
-					    <button class="btn btn-default" type="submit">
-    							<i class="glyphicon glyphicon-download-alt">
-    							</i>
-    					</button>
-    					</span>
-					</div>
-					
-
-					<div class="input-group list-fix">
-					    <div class="panel panel-default">
-					      	<div class="panel-heading">
-					        	<h4 class="panel-title">
-					          		<a data-toggle="collapse" href="#collapse2">
-					          			Kay Elst	
-					          		</a>
-					        	</h4>
-					      	</div>
-					      	<div id="collapse2" class="panel-collapse collapse">
-					        	<div class="panel-body"><p>Project name</p><p>smth</p><p>smth else</p>
-					        	</div>
-					      	</div>
-					    </div>
-					    <span class="input-group-btn">
-					    <button class="btn btn-default" type="submit">
-    							<i class="glyphicon glyphicon-download-alt">
-    							</i>
-    					</button>
-    					</span>
 					</div>
 
-
-					<div class="input-group list-fix">
-					    <div class="panel panel-default">
-					      	<div class="panel-heading">
-					        	<h4 class="panel-title">
-					          		<a data-toggle="collapse" href="#collapse3">
-					          			Bryan Lameir	
-					          		</a>
-					        	</h4>
-					      	</div>
-					      	<div id="collapse3" class="panel-collapse collapse">
-					        	<div class="panel-body"><p>Project name</p><p>smth</p><p>smth else</p>
-					        	</div>
-					      	</div>
-					    </div>
-					    <span class="input-group-btn">
-					    <button class="btn btn-default" type="submit">
-    							<i class="glyphicon glyphicon-download-alt">
-    							</i>
-    					</button>
-    					</span>
+					<div ng-repeat="x in RepoNames" class="btn-group btn-width-fix" role="group">
+						<button type="button" class="btn btn-default btn-block">
+							{{x}}
+						</button>
 					</div>
-
-
+						
  	 			</div>
  	 		</div>
  	 		<div class="col-md-8 col-lg-10 col-sm-8 col-xs-8 PrimaryColor">
