Array RepoNames gefiltert

--- a/views/home.html
+++ b/views/home.html
@@ -27,7 +27,7 @@
 	<div class="text-center" >
   		<div class="btn-toolbar pull-right">
     		<div class="btn-group">
-     	 		<button ng-click="apiRepoCall()" type='button' class="btn btn-lg SignIn-fix AccentColorSignIn">
+     	 		<button ng-click="apiAllStudentsCall()" type='button' class="btn btn-lg SignIn-fix AccentColorSignIn">
      	 		SignIn
      	 		</button>
     		</div>
