Automation of Studentrepos/info

--- a/views/home.html
+++ b/views/home.html
@@ -114,7 +114,8 @@
 					    <p>Repo: {{getReponaam}}</p>
 					    <p>Promotor: {{getPromotor}}</p>
 					    <p>Phone: {{getPhone}}</p>
-					    <p>Address: {{getAddress}}</p>	
+					    <p>Address: {{getAddress}}</p>
+					    <a href="{{getRepoLink}}">Go To Repo</a>	
 					</div>
 					<div ng-switch-when="2" class="my-switch-animation">
 						<p>This Weeks Commits: {{LastCommithtml}}</p>
