Added login button

--- a/views/home.html
+++ b/views/home.html
@@ -28,6 +28,9 @@
   		<div class="btn-toolbar pull-right">
     		<div class="btn-group">
      	 		<button ng-click="apiAllStudentsCall()" type='button' class="btn btn-lg SignIn-fix AccentColorSignIn">
+     	 		apiCall
+     	 		</button>
+     	 		<button ng-click="SignIn()" type='button' class="btn btn-lg SignIn-fix AccentColorSignIn">
      	 		SignIn
      	 		</button>
     		</div>
