--- a/views/home.html
+++ b/views/home.html
@@ -8,6 +8,8 @@
 
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular-animate.js"></script>
 
+	<script src= "https://cdn.rawgit.com/showdownjs/showdown/1.5.0/dist/showdown.min.js"></script>
+
 	<script src="javascripts/app.js"></script>
 
 	<script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
@@ -123,7 +125,7 @@
 					<div ng-switch-when="2" class="my-switch-animation">
 						<p>This Weeks Commits: {{LastCommithtml}}</p>
 						<p>Total Commits: {{TotalCommithtml}}</p>
-						<button ng-click="GetCommits()"></button>
+						<button ng-click="GetCommits()"> View Commits</button>
 						<div ng-repeat="StudentCommit in StudentCommits">
 
 						</div>
@@ -135,7 +137,9 @@
 						<div ng-click="GetScriptie()" class="btn-group" role="group">
 							<button type="button" class="btn btn-success">Get Scriptie</button>
 						</div>
-						{{ScriptieData}}
+						<div ng-bind-html = "ScriptieData">
+
+						</div>
 					</div>
 				</div>
  	 		</div>
