--- a/views/home.html
+++ b/views/home.html
@@ -136,32 +136,31 @@
 								<button type="button" class="btn" ng-class="{'true':'btn-success','false':'btn-danger'}[btnstate_Issues]">Issues</button>
 							</div>
 							<div ng-switch-when="1" class="my-switch-animation">
-						<div ng-repeat="StudentCommit in AllCommits track by $index">
-							<li ng-click="SelectCommit($index)">Commit: {{StudentCommit}} </li>
-						</div>
+								<div ng-repeat="StudentCommit in AllCommits track by $index">
+									<li ng-click="SelectCommit($index)">Commit: {{StudentCommit}} </li>
+								</div>
 							</div>
 							<div ng-switch-when="2" class="my-switch-animation">
-							
 								<div class="btn-group btn-group-justified" role="group">
 									<div ng-click="Btn_GetIssues()" class="btn-group" role="group">
-									    <button type="button" class="btn" ng-class="{'true':'btn-primary','false':'btn-default'}[btnstate_repostats]">
-									    View Issues
-									    </button>
+										<button type="button" class="btn" ng-class="{'true':'btn-Success','false':'btn-Danger'}[btnstate_IssuesView]">
+											View Issues
+										</button>
 									</div>
 									<div ng-click="Btn_CreateIssue()" class="btn-group" role="group">
-									    <button type="button" class="btn" ng-class="{'true':'btn-primary','false':'btn-default'}[btnstate_Repohulp]">
-									    Create Issue
-									    </button>
+										<button type="button" class="btn" ng-class="{'true':'btn-Success','false':'btn-Danger'}[btnstate_IssueCreate]">
+											Create Issue
+										</button>
 									</div>
 								</div>
-
 								<div ng-repeat="x in Repeat">
 									<div>
-						        		<p>Assignee: {{IssueTitels[x]}}</p>
-						        		<p>Issue Number: {{IssueNumbers[x]}}</p>
-						        		<p>Body: {{IssueBodys[x]}}</p>
-						        		<p>State: {{IssueStates[x]}}</p>
-						    		</div>
+										<br>
+										<p>Title: {{IssueTitels[x]}}</p>
+										<p>Issue Number: {{IssueNumbers[x]}}</p>
+										<p>Body: {{IssueBodys[x]}}</p>
+										<p>State: {{IssueStates[x]}}</p>
+									</div>
 								</div>	
 							</div>
 						</div>	
