--- a/views/home.html
+++ b/views/home.html
@@ -174,7 +174,7 @@
 						</div>
 						<div ng-bind-html = "ScriptieData" ng-mouseup="showSelectedText()"></div>
 						<h1> Selected Text </h1>
-						<div ng-bind-html = "ScriptieData">
+						<div ng-bind="selectedText">
 						</div>
 						<button>Add Lines</button>
 					</div>
