--- a/views/home.html
+++ b/views/home.html
@@ -124,6 +124,7 @@
 						<p>New logs: {{NewLogInfo}}</p>
 						<button id="ShowLog" ng-click="ShowLog()">Show new Log</button>
 						<p>{{rawLog}}</p>
+						<button ng-click="ShowCharts()">Show Charts</button>
 					</div>
 					<div ng-switch-when="2" class="my-switch-animation" ng-click = "RepoInfo()">
 						<div class="panel-body" ng-switch="div_val">
