Post en Get Fixed

--- a/views/home.html
+++ b/views/home.html
@@ -73,6 +73,7 @@
 					        		<p>Promotor: {{getPromotor}}</p>
 					        		<p>Phone: {{getPhone}}</p>
 					        		<p>Address: {{getAddress}}</p>
+					        		<p>Bedrijf: {{getBedrijf}}</p>
 									<a href="{{getRepoLink}}">Go To Repo</a>
 					        	</div>
 					      	</div>
